# vajra-stream

./: .coverage  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_RADIONICS_IMPLEMENTATION_ROADMAP.md  ADVANCED_TTS_INTEGRATION_SPECIFICATION.md  AGENTS.md  API_DOCUMENTATION.md  BLESSING_NARRATIVES_GUIDE.md  CHANGELOG.md  COMPASSIONATE_BLESSINGS_GUIDE.md  COMPREHENSIVE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  ENERGETIC_ANATOMY_SPEC.md  FEATURES.md  FEATURE_PARITY_GUIDE.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_INTEGRATION_AND_RADIONICS_SPEC.md  HEALING_SYSTEMS_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_VERIFICATION.md  PRAYER_BOWL_AUDIO.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RADIONICS_ANALYSIS_GUIDE.md  RADIONICS_GUIDE.md  README.md  REFACTORING_PLAN.md  SCALAR_WAVE_THEORY.md  SESSION_SUMMARY.md  START_HERE.md  UNIFIED_ARCHITECTURE.md  Z_AI_GLM_INTEGRATION_COMPLETE.md  audit_modules.py  audit_modules_v2.py  check_missing_practice_data.py  check_schemas.py  (+41 more)
ai_integration_project/: README.md  setup.sh
backend/: requirements.txt  simple_server.py
config/: enhanced_settings.py  settings.py
core/: README.md  __init__.py  advanced_scalar_waves.py  assessment.py  astrocartography.py  astrology.py  audio_generator.py  auspicious_timing.py  blessing_narratives.py  buddha_recitation_loop.py  buddha_tts.py  character_generator.py  character_journey.py  chinese_invocations.py  compassionate_blessings.py  context_builder.py  dharma_tales.py  eighty_eight_buddhas.py  energetic_anatomy.py  energetic_visualization.py  enhanced_audio_generator.py  enhanced_tts.py  extraction.py  healing_session.py  healing_systems.py  integrated_scalar_radionics.py  intelligent_composer.py  internet_context.py  knowledge_index.py  kokoro_tts.py  llm_integration.py  llm_usage.py  meridian_visualization.py  multilingual_tts.py  outlook_generator.py  practice_engine.py  prayer_wheel.py  protocol_selector.py  qwen_tts.py  radionics_engine.py  (+15 more)
data/: astrology_locations.json  events.jsonl
docs/: ARCHITECTURE.md  ASTROCARTOGRAPHY_GUIDE.md  AUTOMATION_ARCHITECTURE.md  BLESSING_SLIDESHOW.md  COMPASSIONATE_BLESSINGS_GUIDE.md  COMPLETE_SYSTEM_ANALYSIS.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  ENHANCED_TTS_GUIDE.md  FEATURES_REFERENCE.md  GITHUB_SETUP.md  IMPLEMENTATION_ROADMAP.md  LLM_KNOWLEDGE_BASE.md  LM_STUDIO_INTEGRATION_SPECIFICATION.md  NARRATIVE_UNIVERSE_SPECIFICATION.md  OFFLINE_DEVELOPMENT_GUIDE.md  OPERATIONS_GUIDE.md  PRAYER_WHEEL_RADIONICS_PROTOCOL.md  PROGRESS_TRACKER.md  PROJECT_SUMMARY.md  README.md  README_MONOLITH.md  README_WEB_APP.md  READY_TO_USE_NOW.md  RNG_ATTUNEMENT.md  SCALAR_WAVE_QUICKSTART.md  SESSION_2_SUMMARY.md  SESSION_SUMMARY.md  TECHNICAL_SPECIFICATION.md  TTS_INTEGRATION_SPEC.md  USAGE_GUIDE.md  VISUALIZATION_GUIDE.md  WEB_ARCHITECTURE.md  Z_AI_GLM_INTEGRATION_ARCHITECTURE.md  frontend-styling-guide.md
examples/: llm_agent_example.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js  vite.config.ts  vitest.config.ts
hardware/: __init__.py  crystal_broadcaster.py  hardware_manager.py
infrastructure/: event_bus.py
knowledge/: dharanis.json  eighty_eight_buddhas.json  frequencies.json  healing_knowledge.json  historical_suffering_events.json  iching.json  mantras.json  practice_frequencies.json  sacred_entities.json  sanskrit_pronunciation.json  sutra_passages.json  tarot_card_art.json  tarot_deck.json
modules/: README.md  __init__.py  anatomy.py  astrology.py  audio.py  blessing_router.py  blessings.py  composer.py  crystal.py  dharma_tales.py  enhanced_scalar_waves.py  healing.py  healing_dialogue.py  interfaces.py  llm.py  outlook.py  personal_healing.py  prayer_wheel.py  radionics.py  radionics_enhancer.py  radionics_operator.py  scalar_waves.py  time_cycles.py  tts_integration.py  visualization.py  wave_manager.py
scratch/: epic_outlook.json  latest_history.json  print_models_json.py  saka_dawa_blessing_fixed.json  search_orchestrator_service.py  search_references.py  search_rng.py  single_outlook.json  test_astrology_compile.py  test_characters.json  test_chat_astrology.py  test_dynamic_routing.py  test_generate_model.py  test_generation_length.py  test_kery.py  test_llm_integration_generate.py  test_lm_studio_all_models.py  test_lm_studio_direct.py  test_lm_studio_long_direct.py  test_lm_studio_status.py  test_models.py  test_mops_direct.py  test_mops_load.py  test_outlook_generator_pieces.py  test_raw.py  test_services.py
scripts/: astrocartography_analysis.py  audio_comparison_test.py  audit_modules.py  audit_ws_contract.py  blessing_manager.py  create_test_populations.py  demo_unified_system.py  direct_seed_chinese_lore.py  explore_improvements.py  full_ritual_broadcast.py  generate_iching_data.py  generate_tarot_art.py  holistic_blessing_run.py  import_blessing_populations.py  integrated_blessing.py  july4_ritual.py  quick_test.py  radionics_analysis.py  radionics_operation.py  run_88_buddhas_3x.py  run_blessing.py  scalar_wave_benchmark.py  seed_chinese_lore.py  setup_database.py  smoke_task17.py  start_comfyui.bat  story_generator.py  test_astrology_systems.py  test_audio_fix.py  test_audio_playback.py  test_backend_audio_playback.py  test_connection.py  test_data_flows.py  test_data_loading.py  test_debug.py  test_debug2.py  test_enhanced_audio.py  test_followup.py  test_full_stack.py  test_full_stack_simulation.py  (+25 more)
templates/: visualization.html
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_api_endpoints.py  test_astrology.py  test_audio.py  test_auspicious_timing_bodhicitta.py  test_container_modules.py  test_core_modules.py  test_divination.py  test_endpoints_init_sync.py  test_extraction.py  test_extraction_e2e.py  test_foundation.py  test_integration_phase2.py  test_integration_simple.py  test_llm_models.py  test_llm_routing.py  test_llm_routing_integration.py  test_llm_tool_schemas.py  test_module_connections.py  test_new_implementation.py  test_operator.py  test_outlook_import_export.py  (+13 more)
(+638 files in other folders)
